corrected minor layout issues

--- a/JMCResume/Pages/Portfolio.razor.css
+++ b/JMCResume/Pages/Portfolio.razor.css
@@ -1,4 +1,8 @@
-﻿.card-header h2{
+﻿.accordion{
+    margin-bottom: 10px;
+}
+
+.card-header h2{
     display:grid;
     grid-template-columns: auto 1fr;
 }
