--- a/JMCResume/Shared/MainLayout.razor.css
+++ b/JMCResume/Shared/MainLayout.razor.css
@@ -28,7 +28,7 @@
     }
 
 .content {
-    height: 95vh;
+    min-height: 95vh;
     margin: 10px;
     box-shadow: black 5px 5px 30px 1px;
 }
