--- a/JMCResume/Shared/NavMenu.razor.css
+++ b/JMCResume/Shared/NavMenu.razor.css
@@ -56,6 +56,7 @@
 .bottom-row {
     text-align:center;
     margin-bottom: 10px;
+    margin-top: 5px;
 }
 
     .bottom-row svg {
